# eventhub

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
eventhub/: settings.py  urls.py
events/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_rename_category_event_categories.py  0003_event_capacity.py
tickets/: models.py  serializers.py  urls.py  views.py
tickets/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_age_user_date_joined_user_is_organizer_and_more.py
